--- a/pages/control/txxmxx/txBase/txBase.wxml
+++ b/pages/control/txxmxx/txBase/txBase.wxml
@@ -1,5 +1,4 @@
-<view class="loading-position-center"><van-loading wx:if="{{showLoadLoading}}" size="35px" color="#0089dd" vertical><text style="color:#0089dd">加载中...</text></van-loading></view>
-<view class="loading-position-center"><van-loading wx:if="{{showUpLoadLoading}}" size="35px" color="#0089dd" vertical><text style="color:#0089dd">上传中...</text></van-loading></view>
+
 <van-toast id="van-toast" />
 
 <view class="project-name-page">{{projectInfo.projectName}}</view>
@@ -14,28 +13,28 @@
     <input name="categoryType" value="{{projectInfo.categoryType}}" hidden="true" />
     <van-field label="建设单位" value="{{projectInfo.unitName}}" placeholder="请输入" name="unitName"  bind:change="baseChange"/>
     <van-field label="项目名称" value="{{projectInfo.projectName}}" placeholder="请输入" name="projectName"  bind:change="baseChange"/>
-    <van-field label="占地面积" value="{{projectInfo.coverArea}}" placeholder="请输入" name="coverArea"  bind:change="baseChange"/>
-    <van-field label="总建筑面积" value="{{projectInfo.totalArea}}" placeholder="请输入" name="totalArea"  bind:change="baseChange"/>
+    <van-field label="占地面积(亩)" value="{{projectInfo.coverArea}}" placeholder="请输入" name="coverArea"  bind:change="baseChange"/>
+    <van-field label="总建筑面积(万平米)" value="{{projectInfo.totalArea}}" placeholder="请输入" name="totalArea"  bind:change="baseChange"/>
     <block wx:if="{{categoryType==1}}">
-      <van-field label="楼栋数" value="{{projectInfo.pmSpecialBuild.buildNum}}" placeholder="请输入" name="buildNum"  bind:change="baseChange"/>
-      <van-field label="住宅套数" value="{{projectInfo.pmSpecialBuild.houseNum}}" placeholder="请输入" name="houseNum"  bind:change="baseChange"/>
-      <van-field label="店面间数" value="{{projectInfo.pmSpecialBuild.storeNum}}" placeholder="请输入" name="storeNum"  bind:change="baseChange"/>
-      <van-field label="商业面积" value="{{projectInfo.pmSpecialBuild.businessArea}}" placeholder="请输入" name="businessArea"  bind:change="baseChange"/>
-      <van-field label="住宅面积" value="{{projectInfo.pmSpecialBuild.houseArea}}" placeholder="请输入" name="houseArea"  bind:change="baseChange"/>
+      <van-field label="楼栋数(栋)" value="{{projectInfo.pmSpecialBuild.buildNum}}" placeholder="请输入" name="buildNum"  bind:change="baseChange"/>
+      <van-field label="住宅套数(套)" value="{{projectInfo.pmSpecialBuild.houseNum}}" placeholder="请输入" name="houseNum"  bind:change="baseChange"/>
+      <van-field label="店面间数(间)" value="{{projectInfo.pmSpecialBuild.storeNum}}" placeholder="请输入" name="storeNum"  bind:change="baseChange"/>
+      <van-field label="商业面积(万平米)" value="{{projectInfo.pmSpecialBuild.businessArea}}" placeholder="请输入" name="businessArea"  bind:change="baseChange"/>
+      <van-field label="住宅面积(万平米)" value="{{projectInfo.pmSpecialBuild.houseArea}}" placeholder="请输入" name="houseArea"  bind:change="baseChange"/>
     </block>
     <block wx:if="{{categoryType==2}}">
-      <van-field label="园路面积" value="{{projectInfo.pmSpecialPark.pathArea}}" placeholder="请输入" name="pathArea"  bind:change="baseChange"/>
-      <van-field label="铺装面积" value="{{projectInfo.pmSpecialPark.paveArea}}" placeholder="请输入" name="paveArea"  bind:change="baseChange"/>
+      <van-field label="园路面积(万平米)" value="{{projectInfo.pmSpecialPark.pathArea}}" placeholder="请输入" name="pathArea"  bind:change="baseChange"/>
+      <van-field label="铺装面积(万平米)" value="{{projectInfo.pmSpecialPark.paveArea}}" placeholder="请输入" name="paveArea"  bind:change="baseChange"/>
       <van-field label="景观桥(座)" value="{{projectInfo.pmSpecialPark.landscapeBridge}}" placeholder="请输入" name="landscapeBridge"  bind:change="baseChange"/>
       <van-field label="乔木数(颗)" value="{{projectInfo.pmSpecialPark.treeNum}}" placeholder="请输入" name="treeNum"  bind:change="baseChange"/>
       <van-field label="亮化数(盏)" value="{{projectInfo.pmSpecialPark.brightenNum}}" placeholder="请输入" name="brightenNum"  bind:change="baseChange"/>
     </block>
     <block wx:if="{{categoryType==3}}">
-      <van-field label="道路长" value="{{projectInfo.pmSpecialMunicipal.roadLength}}" placeholder="请输入" name="roadLength"  bind:change="baseChange"/>
-      <van-field label="道路宽" value="{{projectInfo.pmSpecialMunicipal.roadWidth}}" placeholder="请输入" name="roadWidth"  bind:change="baseChange"/>
-      <van-field label="行车道宽" value="{{projectInfo.pmSpecialMunicipal.carriagewayWidth}}" placeholder="请输入" name="carriagewayWidth"  bind:change="baseChange"/>
-      <van-field label="人行道宽" value="{{projectInfo.pmSpecialMunicipal.sidewalkWidth}}" placeholder="请输入" name="sidewalkWidth"  bind:change="baseChange"/>
-      <van-field label="花池宽" value="{{projectInfo.pmSpecialMunicipal.pondWidth}}" placeholder="请输入" name="pondWidth"  bind:change="baseChange"/>
+      <van-field label="道路长(米)" value="{{projectInfo.pmSpecialMunicipal.roadLength}}" placeholder="请输入" name="roadLength"  bind:change="baseChange"/>
+      <van-field label="道路宽(米)" value="{{projectInfo.pmSpecialMunicipal.roadWidth}}" placeholder="请输入" name="roadWidth"  bind:change="baseChange"/>
+      <van-field label="行车道宽(米)" value="{{projectInfo.pmSpecialMunicipal.carriagewayWidth}}" placeholder="请输入" name="carriagewayWidth"  bind:change="baseChange"/>
+      <van-field label="人行道宽(米)" value="{{projectInfo.pmSpecialMunicipal.sidewalkWidth}}" placeholder="请输入" name="sidewalkWidth"  bind:change="baseChange"/>
+      <van-field label="花池宽(米)" value="{{projectInfo.pmSpecialMunicipal.pondWidth}}" placeholder="请输入" name="pondWidth"  bind:change="baseChange"/>
     </block>
     <van-field label="建设地点" value="{{projectInfo.buildSite}}" type="textarea" placeholder="请输入" name="buildSite"  bind:change="baseChange"/>
     <van-field label="建设年限" value="{{projectInfo.buildYear}}" placeholder="请输入" name="buildYear" />
@@ -102,52 +101,52 @@
 <view hidden="{{!(showMoney == active)}}" class="suspension-card-external-page">
   <view class="suspension-card-internal-page">
     <!-- 投资这里需求不清晰，待定 -->
-    <van-field label="项目总投资" value="{{projectInfo.totalMoney}}" placeholder="暂不开放" name="totalMoney" readonly  bind:change="zjChange"/>
-    <van-field label="本年投资" value="{{projectInfo.totalMoney1}}" placeholder="暂不开放" name="totalMoney1" readonly  bind:change="zjChange"/>
-    <van-field label="第二年年度投资" value="{{projectInfo.totalMoney2}}" placeholder="暂不开放" name="totalMoney2" readonly bind:change="zjChange" />
-    <van-field label="第三年年度投资" value="{{projectInfo.totalMoney3}}" placeholder="暂不开放" name="totalMoney3" readonly  bind:change="zjChange"/>
+    <van-field label="项目总投资(万元)" value="{{projectInfo.totalMoney}}" placeholder="暂不开放" name="totalMoney" readonly  bind:change="zjChange"/>
+    <van-field label="本年投资(万元)" value="{{projectInfo.totalMoney1}}" placeholder="暂不开放" name="totalMoney1" readonly  bind:change="zjChange"/>
+    <van-field label="第二年年度投资(万元)" value="{{projectInfo.totalMoney2}}" placeholder="暂不开放" name="totalMoney2" readonly bind:change="zjChange" />
+    <van-field label="第三年年度投资(万元)" value="{{projectInfo.totalMoney3}}" placeholder="暂不开放" name="totalMoney3" readonly  bind:change="zjChange"/>
 
     <form bindsubmit="zjFormSubmit">
     <block wx:if="{{categoryType==1}}" wx:key="index">
       <input name="id" value="{{projectInfo.pmBuildCost.id}}" hidden="true" />
-      <van-field label="工程建安费" value="{{projectInfo.pmBuildCost.jiananCost}}" placeholder="请输入" name="jiananCost"  bind:change="zjChange"/>
-      <van-field label="房建造价" value="{{projectInfo.pmBuildCost.houseBuildCost}}" placeholder="请输入" name="houseBuildCost"  bind:change="zjChange"/>
-      <van-field label="配套造价" value="{{projectInfo.pmBuildCost.supportCost}}" placeholder="请输入" name="supportCost"  bind:change="zjChange"/>
-      <van-field label="供水造价" value="{{projectInfo.pmBuildCost.waterCost}}" placeholder="请输入" name="waterCost"  bind:change="zjChange"/>
-      <van-field label="供电造价" value="{{projectInfo.pmBuildCost.electricityCost}}" placeholder="请输入" name="electricityCost"  bind:change="zjChange"/>
-      <van-field label="供气造价" value="{{projectInfo.pmBuildCost.airCost}}" placeholder="请输入" name="airCost"  bind:change="zjChange"/>
-      <van-field label="设计费用" value="{{projectInfo.pmBuildCost.designCost}}" placeholder="请输入" name="designCost"  bind:change="zjChange"/>
-    <van-field label="勘察费用" value="{{projectInfo.pmBuildCost.surveyCost}}" placeholder="请输入" name="surveyCost"  bind:change="zjChange"/>
-    <van-field label="检测费用" value="{{projectInfo.pmBuildCost.checkCost}}" placeholder="请输入" name="checkCost"  bind:change="zjChange"/>
-    <van-field label="监理费用" value="{{projectInfo.pmBuildCost.supervisionCost}}" placeholder="请输入" name="supervisionCost"  bind:change="zjChange"/>
-    <van-field label="图审费用" value="{{projectInfo.pmBuildCost.drawCost}}" placeholder="请输入" name="drawCost"  bind:change="zjChange"/>
-    <van-field label="其他费用" value="{{projectInfo.pmBuildCost.otherCost}}" placeholder="请输入" name="otherCost"  bind:change="zjChange"/>
+      <van-field label="工程建安费(万元)" value="{{projectInfo.pmBuildCost.jiananCost}}" placeholder="请输入" name="jiananCost"  bind:change="zjChange"/>
+      <van-field label="房建造价(万元)" value="{{projectInfo.pmBuildCost.houseBuildCost}}" placeholder="请输入" name="houseBuildCost"  bind:change="zjChange"/>
+      <van-field label="配套造价(万元)" value="{{projectInfo.pmBuildCost.supportCost}}" placeholder="请输入" name="supportCost"  bind:change="zjChange"/>
+      <van-field label="供水造价(万元)" value="{{projectInfo.pmBuildCost.waterCost}}" placeholder="请输入" name="waterCost"  bind:change="zjChange"/>
+      <van-field label="供电造价(万元)" value="{{projectInfo.pmBuildCost.electricityCost}}" placeholder="请输入" name="electricityCost"  bind:change="zjChange"/>
+      <van-field label="供气造价(万元)" value="{{projectInfo.pmBuildCost.airCost}}" placeholder="请输入" name="airCost"  bind:change="zjChange"/>
+      <van-field label="设计费用(万元)" value="{{projectInfo.pmBuildCost.designCost}}" placeholder="请输入" name="designCost"  bind:change="zjChange"/>
+    <van-field label="勘察费用(万元)" value="{{projectInfo.pmBuildCost.surveyCost}}" placeholder="请输入" name="surveyCost"  bind:change="zjChange"/>
+    <van-field label="检测费用(万元)" value="{{projectInfo.pmBuildCost.checkCost}}" placeholder="请输入" name="checkCost"  bind:change="zjChange"/>
+    <van-field label="监理费用(万元)" value="{{projectInfo.pmBuildCost.supervisionCost}}" placeholder="请输入" name="supervisionCost"  bind:change="zjChange"/>
+    <van-field label="图审费用(万元)" value="{{projectInfo.pmBuildCost.drawCost}}" placeholder="请输入" name="drawCost"  bind:change="zjChange"/>
+    <van-field label="其他费用(万元)" value="{{projectInfo.pmBuildCost.otherCost}}" placeholder="请输入" name="otherCost"  bind:change="zjChange"/>
     </block>
     <block wx:if="{{categoryType==2}}" wx:key="index">
-      <van-field label="工程建安费" value="{{projectInfo.pmParkCost.jiananCost}}" placeholder="请输入" name="jiananCost"  bind:change="zjChange"/>
-      <van-field label="园林造价" value="{{projectInfo.pmParkCost.parkCost}}" placeholder="请输入" name="parkCost"   bind:change="zjChange"/>
-      <van-field label="配套用房造价" value="{{projectInfo.pmParkCost.supportHouseCost}}" placeholder="请输入" name="supportHouseCost"  bind:change="zjChange"/>
-      <van-field label="路场工程造价" value="{{projectInfo.pmParkCost.roadCost}}" placeholder="请输入" name="roadCost"  bind:change="zjChange"/>
-      <van-field label="文化景观造价" value="{{projectInfo.pmParkCost.culturalCost}}" placeholder="请输入" name="culturalCost"  bind:change="zjChange"/>
-      <van-field label="设计费用" value="{{projectInfo.pmParkCost.designCost}}" placeholder="请输入" name="designCost"  bind:change="zjChange"/>
-    <van-field label="勘察费用" value="{{projectInfo.pmParkCost.surveyCost}}" placeholder="请输入" name="surveyCost"  bind:change="zjChange"/>
-    <van-field label="检测费用" value="{{projectInfo.pmParkCost.checkCost}}" placeholder="请输入" name="checkCost"  bind:change="zjChange"/>
-    <van-field label="监理费用" value="{{projectInfo.pmParkCost.supervisionCost}}" placeholder="请输入" name="supervisionCost"  bind:change="zjChange"/>
-    <van-field label="图审费用" value="{{projectInfo.pmParkCost.drawCost}}" placeholder="请输入" name="drawCost"  bind:change="zjChange"/>
-    <van-field label="其他费用" value="{{projectInfo.pmParkCost.otherCost}}" placeholder="请输入" name="otherCost"  bind:change="zjChange"/>
+      <van-field label="工程建安费(万元)" value="{{projectInfo.pmParkCost.jiananCost}}" placeholder="请输入" name="jiananCost"  bind:change="zjChange"/>
+      <van-field label="园林造价(万元)" value="{{projectInfo.pmParkCost.parkCost}}" placeholder="请输入" name="parkCost"   bind:change="zjChange"/>
+      <van-field label="配套用房造价(万元)" value="{{projectInfo.pmParkCost.supportHouseCost}}" placeholder="请输入" name="supportHouseCost"  bind:change="zjChange"/>
+      <van-field label="路场工程造价(万元)" value="{{projectInfo.pmParkCost.roadCost}}" placeholder="请输入" name="roadCost"  bind:change="zjChange"/>
+      <van-field label="文化景观造价(万元)" value="{{projectInfo.pmParkCost.culturalCost}}" placeholder="请输入" name="culturalCost"  bind:change="zjChange"/>
+      <van-field label="设计费用(万元)" value="{{projectInfo.pmParkCost.designCost}}" placeholder="请输入" name="designCost"  bind:change="zjChange"/>
+    <van-field label="勘察费用(万元)" value="{{projectInfo.pmParkCost.surveyCost}}" placeholder="请输入" name="surveyCost"  bind:change="zjChange"/>
+    <van-field label="检测费用(万元)" value="{{projectInfo.pmParkCost.checkCost}}" placeholder="请输入" name="checkCost"  bind:change="zjChange"/>
+    <van-field label="监理费用(万元)" value="{{projectInfo.pmParkCost.supervisionCost}}" placeholder="请输入" name="supervisionCost"  bind:change="zjChange"/>
+    <van-field label="图审费用(万元)" value="{{projectInfo.pmParkCost.drawCost}}" placeholder="请输入" name="drawCost"  bind:change="zjChange"/>
+    <van-field label="其他费用(万元)" value="{{projectInfo.pmParkCost.otherCost}}" placeholder="请输入" name="otherCost"  bind:change="zjChange"/>
     </block>
     <block wx:if="{{categoryType==3}}" wx:key="index">
-      <van-field label="工程建安费" value="{{projectInfo.pmMunicipalCost.jiananCost}}" placeholder="请输入" name="jiananCost"  bind:change="zjChange"/>
-      <van-field label="市政造价" value="{{projectInfo.pmMunicipalCost.municipalCost}}" placeholder="请输入" name="municipalCost"  bind:change="zjChange"/>
-      <van-field label="桥梁造价" value="{{projectInfo.pmMunicipalCost.bridgeCost}}" placeholder="请输入" name="bridgeCost"  bind:change="zjChange"/>
-      <van-field label="给排水造价" value="{{projectInfo.pmMunicipalCost.drainageCost}}" placeholder="请输入" name="drainageCost"  bind:change="zjChange"/>
-      <van-field label="交通工程造价" value="{{projectInfo.pmMunicipalCost.trafficCost}}" placeholder="请输入" name="trafficCost"  bind:change="zjChange"/>
-      <van-field label="设计费用" value="{{projectInfo.pmMunicipalCost.designCost}}" placeholder="请输入" name="designCost"  bind:change="zjChange"/>
-    <van-field label="勘察费用" value="{{projectInfo.pmMunicipalCost.surveyCost}}" placeholder="请输入" name="surveyCost"  bind:change="zjChange"/>
-    <van-field label="检测费用" value="{{projectInfo.pmMunicipalCost.checkCost}}" placeholder="请输入" name="checkCost"  bind:change="zjChange"/>
-    <van-field label="监理费用" value="{{projectInfo.pmMunicipalCost.supervisionCost}}" placeholder="请输入" name="supervisionCost"  bind:change="zjChange"/>
-    <van-field label="图审费用" value="{{projectInfo.pmMunicipalCost.drawCost}}" placeholder="请输入" name="drawCost"  bind:change="zjChange"/>
-    <van-field label="其他费用" value="{{projectInfo.pmMunicipalCost.otherCost}}" placeholder="请输入" name="otherCost"  bind:change="zjChange"/>
+      <van-field label="工程建安费(万元)" value="{{projectInfo.pmMunicipalCost.jiananCost}}" placeholder="请输入" name="jiananCost"  bind:change="zjChange"/>
+      <van-field label="市政造价(万元)" value="{{projectInfo.pmMunicipalCost.municipalCost}}" placeholder="请输入" name="municipalCost"  bind:change="zjChange"/>
+      <van-field label="桥梁造价(万元)" value="{{projectInfo.pmMunicipalCost.bridgeCost}}" placeholder="请输入" name="bridgeCost"  bind:change="zjChange"/>
+      <van-field label="给排水造价(万元)" value="{{projectInfo.pmMunicipalCost.drainageCost}}" placeholder="请输入" name="drainageCost"  bind:change="zjChange"/>
+      <van-field label="交通工程造价(万元)" value="{{projectInfo.pmMunicipalCost.trafficCost}}" placeholder="请输入" name="trafficCost"  bind:change="zjChange"/>
+      <van-field label="设计费用(万元)" value="{{projectInfo.pmMunicipalCost.designCost}}" placeholder="请输入" name="designCost"  bind:change="zjChange"/>
+    <van-field label="勘察费用(万元)" value="{{projectInfo.pmMunicipalCost.surveyCost}}" placeholder="请输入" name="surveyCost"  bind:change="zjChange"/>
+    <van-field label="检测费用(万元)" value="{{projectInfo.pmMunicipalCost.checkCost}}" placeholder="请输入" name="checkCost"  bind:change="zjChange"/>
+    <van-field label="监理费用(万元)" value="{{projectInfo.pmMunicipalCost.supervisionCost}}" placeholder="请输入" name="supervisionCost"  bind:change="zjChange"/>
+    <van-field label="图审费用(万元)" value="{{projectInfo.pmMunicipalCost.drawCost}}" placeholder="请输入" name="drawCost"  bind:change="zjChange"/>
+    <van-field label="其他费用(万元)" value="{{projectInfo.pmMunicipalCost.otherCost}}" placeholder="请输入" name="otherCost"  bind:change="zjChange"/>
     </block>
     <button wx:if="{{showZjButton}}" size="mini" hover-class="clickHover" class="submit-button" formType="submit">提交</button>
     </form>
@@ -158,9 +157,9 @@
 <view hidden="{{!(showPart==active && categoryType==1)}}" wx:for="{{projectInfo.list}}" wx:key="index" class="suspension-card-external-page">
   <view class="suspension-card-internal-page">
     <van-field readonly label="楼栋号" value="{{item.ztName}}" placeholder="请输入" name="ztName" />
-    <van-field readonly label="工程造价" value="{{item.projectCost}}" placeholder="请输入" name="projectCost" />
-    <van-field readonly label="建筑面积" value="{{item.buildArea}}" placeholder="请输入" name="buildArea" />
-    <van-field readonly label="层数" value="{{item.floors}}" placeholder="请输入" name="floors" />
+    <van-field readonly label="工程造价(万元)" value="{{item.projectCost}}" placeholder="请输入" name="projectCost" />
+    <van-field readonly label="建筑面积(万平米)" value="{{item.buildArea}}" placeholder="请输入" name="buildArea" />
+    <van-field readonly label="层数(层)" value="{{item.floors}}" placeholder="请输入" name="floors" />
   </view>
 </view>
 </view>
